Allow animation for refresh icon

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -78,7 +78,8 @@
   to { transform: rotate(360deg); }
 }
 
-.spin {
+.spin-container {
+  display: inline-block;
   animation: spin 1s linear infinite;
 }
 
